feat(sleep record): new endpoint for unfollow user
