# app/controllers/api/v1/followings_controller.rb
@@ -1,12 +1,23 @@
 
 module Api::V1
     class FollowingsController < ApplicationController
-        before_action :is_user_exist?, only: [:create]
+        before_action :is_user_exist?, only: [ :create, :destroy ]
 
         def create
             user = @user
             following = user.followings.create!(followed_id: params[:followed_id])
             render json: following, status: :created
+        end
+
+        def destroy
+            user = @user
+            following = Following.find_by(follower_id: user.id, followed_id: params[:following_id])
+            if following.present?
+                following.destroy
+                head :no_content
+            else
+                render json: { error: 'Following record not found' }, status: :not_found
+            end
         end
 
         private
